--- a/exercicios/exc14/parte01.html
+++ b/exercicios/exc14/parte01.html
@@ -31,7 +31,7 @@
     <section>
       <br />
       <p>hours</p>
-      <img src="parte01-img/0.jpeg" alt="" />
+      <img src="0.jpeg" alt="" />
     </section>
     <p>&copy filipe-nascimento1</p>
     <script>
@@ -47,16 +47,16 @@
       
       paragrafo.innerHTML = `<p>Agora são exatamente ${horas} horas</p>`
       if (horas < 12 && horas > 5) {
-        imagem.src = "parte01-img/1.jpeg"
+        imagem.src = "1.jpeg"
         corpo.backgroundColor = '#d49c4f'
       } else if (horas < 18 && horas > 11) {
-        imagem.src = "parte01-img/2.jpeg"
+        imagem.src = "2.jpeg"
         corpo.backgroundColor = '#53784ac6'
       } else if (horas < 24 && horas > 17) {
-        imagem.src = "parte01-img/3.jpg";
+        imagem.src = "3.jpg";
         corpo.backgroundColor = '#fbed36'
       } else {
-        imagem.src = "parte01-img/0.jpeg"
+        imagem.src = "0.jpeg"
         corpo.backgroundColor = '#001f8d'
       }
     </script>
